# fconx

./: README.md
fconx/: Cargo.toml
fconx-cli/: Cargo.toml
fconx-cli/src/: main.rs
fconx-scraper/: Cargo.toml
fconx-scraper/src/: lib.rs
fconx-scraper/src/config/: config.rs  mod.rs  series.rs
fconx-scraper/src/downloader/: downloader.rs  mod.rs
fconx-scraper/src/episode/: mod.rs  model.rs
fconx-scraper/src/fconx/: fconx.rs
fconx-scraper/src/rw/: mod.rs  rw_json.rs  rw_mp3.rs
fconx-scraper/src/scraper/: download_url_scraper.rs  episode_scraper.rs  mod.rs  scraper.rs
fconx/src/: lib.rs
fconx/src/canceller/: mod.rs
fconx/src/config/: config.rs  model.rs
fconx/src/downloader/: downloader.rs  error.rs  mod.rs
fconx/src/episode/: mod.rs  model.rs
fconx/src/fconx/: fconx.rs  mod.rs
fconx/src/hasher/: mod.rs
fconx/src/logger/: log.rs  logger.rs  mod.rs
fconx/src/rw/: rw_json.rs  rw_mp3.rs
fconx/src/scraper/: download_url_scraper.rs  episode_scraper.rs  mod.rs
