[package]
name = "fconx_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0.57"
parking_lot = "0.12.1"

uuid = { version = "1.1.2", features = ["v5", "fast-rng"] }
bytes = "1.1.0"
chrono = "0.4.19"
serde = "1.0.137"
serde_json = "1.0.82"
url = "2.2.2"

reqwest = "0.11.11"

chromiumoxide = "0.3.5"
futures = "0.3.21"
async-std = "1.11.0"

# rust-crypto = "0.2.36"
# rand = "0.8.4"
# regex = "1.1.0"
